# TOOL_godot_cage_deformer

./: .gitignore  .gitrepo  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.biharmonic_3d  LICENSE.md  README  README.md  SConstruct  justfile  main.cpp  main_somig.cpp
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: builds.yml
demo/: output_with_boundary.obj.import  project.godot
demo/addons/VertexHandles/: VertexHandles.gd  VertexHandlesGizmo.gd
demo/triangle_3d_cage/art/: cage.obj.import  cage_deformed.obj.import  cage_deformed_variant_1.obj.import  clothing.mtl  clothing.obj.import  mesh.mtl  mesh.obj.import
demo/triangle_3d_cage/art/cages/: character_body.obj.import  node_3d.tscn
demo/triangle_3d_cage/scenes/: node_3d.tscn
include/: BHC.h  BasicIO.h  somig.h
misc/scripts/: check_ci_log.py  copyright_headers.py  dotnet_format.py  file_format.py  header_guards.py  install_d3d12_sdk_windows.py
src/: BHC.h  BasicIO.h  mesh_morph_3d.cpp  mesh_morph_3d.h  point3.h  register_types.cpp  register_types.h  somig.cpp  vertex_handles_editor_plugin.cpp  vertex_handles_editor_plugin.h  vertex_handles_gizmo_plugin.cpp  vertex_handles_gizmo_plugin.h
